--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 	"type": "module",
 	"dependencies": {
 		"autoprefixer": "^10.4.16",
+		"chart.js": "^4.4.1",
 		"postcss": "^8.4.31",
+		"svelte-chartjs": "^3.1.2",
 		"svelte-routing": "^2.6.0",
 		"tailwindcss": "^3.3.5"
 	}
