--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"chart.js": "^4.4.1",
 		"postcss": "^8.4.31",
 		"svelte-chartjs": "^3.1.2",
+		"svelte-feather-icons": "^4.1.0",
 		"svelte-routing": "^2.6.0",
 		"tailwindcss": "^3.3.5"
 	}
