--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss": "^8.4.31",
     "svelte-chartjs": "^3.1.2",
     "svelte-feather-icons": "^4.1.0",
+    "svelte-grid": "^5.1.2",
     "svelte-routing": "^2.6.0",
     "tailwindcss": "^3.3.5"
   }
