--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.20.4",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.4.3",
+    "@sveltejs/adapter-auto": "^2.1.0",
+    "@sveltejs/kit": "^1.27.2",
+    "svelte": "^4.2.2",
+    "svelte-check": "^3.5.2",
     "tailwind-scrollbar": "^3.0.5",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^4.4.2"
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0"
   },
   "type": "module",
   "dependencies": {
     "@sveu/browser": "^1.0.1",
+    "apexcharts": "^3.52.0",
     "autoprefixer": "^10.4.16",
     "chart.js": "^4.4.1",
     "postcss": "^8.4.31",
     "svelte-chartjs": "^3.1.2",
+    "svelte-dnd-action": "^0.9.49",
     "svelte-feather-icons": "^4.1.0",
-    "svelte-grid": "^5.1.2",
+    "svelte-grid-extended": "^1.2.1",
     "svelte-routing": "^2.6.0",
     "tailwindcss": "^3.3.5"
   }
